--- a/config.yml
+++ b/config.yml
@@ -11,43 +11,32 @@ assistant_id: 20240207-100712-seething-force
 language: en
 
 pipeline: 
-# # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
-# # If you'd like to customize it, uncomment and adjust the pipeline.
-# # See https://rasa.com/docs/rasa/tuning-your-model for more information.
-   - name: WhitespaceTokenizer
-   - name: RegexFeaturizer
-   - name: LexicalSyntacticFeaturizer
-   - name: CountVectorsFeaturizer
-   - name: CountVectorsFeaturizer
-     analyzer: char_wb
-     min_ngram: 1
-     max_ngram: 4
-   - name: DIETClassifier
-     epochs: 100
-     constrain_similarities: true
-   - name: EntitySynonymMapper
-   - name: ResponseSelector
-     epochs: 100
-     constrain_similarities: true
-   - name: FallbackClassifier
-     threshold: 0.3
-     ambiguity_threshold: 0.1
+  - name: WhitespaceTokenizer
+  - name: RegexFeaturizer
+  - name: CountVectorsFeaturizer
+    analyzer: char_wb
+    min_ngram: 1
+    max_ngram: 4
+  - name: DIETClassifier
+    epochs: 200  # Increase epochs for better learning
+    constrain_similarities: true
+  - name: EntitySynonymMapper
 
-# Configuration for Rasa Core.
-# https://rasa.com/docs/rasa/core/policies/
-policies: 
-# # No configuration for policies was provided. The following default policies were used to train your model.
-# # If you'd like to customize them, uncomment and adjust the policies.
-# # See https://rasa.com/docs/rasa/policies for more information.
-   - name: MemoizationPolicy
-   - name: TEDPolicy
-#   - name: UnexpecTEDIntentPolicy
-     max_history: 5
-#     epochs: 100
-#   - name: TEDPolicy
-#     max_history: 5
-     epochs: 100
-#     constrain_similarities: true
+  - name: FallbackClassifier
+    threshold: 0.5  # Adjust threshold as needed
+    ambiguity_threshold: 0.3  # Adjust ambiguity threshold as needed
+
+
+policies:
+  - name: MemoizationPolicy
+  - name: TEDPolicy
+    max_history: 10  # Adjust max_history as needed
+    epochs: 200  # Increase epochs for better learning
+  - name: RulePolicy
+ 
+
+
+
 
 # config.yml
 # ...
